feat(app): 重构应用页面结构并优化服务实现
- 将首页重命名为账单页面并更新路由配置
- 新增家庭、统计和个人页面并集成到标签栏
- 更新应用底部导航栏图标和标题配置
- 优化服务器端用户服务中的字符串工具类使用
- 简化账单服务中的集合操作方法调用
- 移除组件声明文件中未使用的第三方组件引用
- 添加Lucide图标库依赖以丰富应用图标资源